# courses-and-practices

./: README.md
google-code-jam/2021/: interactive_runner.py  local_testing_tool.py  my_solution.py  pyproject.toml  qualification_round.ipynb
google-code-jam/2021/qualification_round/: local_testing_tool.py  median_sort.py  moons_and_umbrellas.py  reversort.py  reversort_engineering.py
google-code-jam/2022/: pyproject.toml
google-code-jam/2022/qualification_round/: 3d_printing.py  (+7 more)
handson-ml/: README.md  pyproject.toml
handson-ml/chapter_01/: the_machine_learning_landscape.ipynb
handson-ml/chapter_02/: housing.ipynb
handson-ml/chapter_03/: classification.ipynb
handson-ml/chapter_05/: svm.ipynb
handson-ml/chapter_06/: decision_tree.ipynb  iris_tree.dot
handson-ml/chapter_07/: ensemble_learning.ipynb
handson-ml/chapter_08/: dimensionality_reduction.ipynb
ibm-data-engineering-course/: .python-version  README.md  pyproject.toml
ibm-data-engineering-course/2_etl_and_data_pipelines/: cp_access_log.sh  csv2db.sh  extracted_data.txt  extracted_log_data.txt  temperature_etl.sh  transformed_data.csv  transformed_log_data.csv  web-server-access-log.txt
ibm-data-engineering-course/3_data_pipelines_using_airflow/: dummy_dag.py  etl_server_access_log_processing.py  my_first_dag.py
ibm-data-engineering-course/4_streaming_pipelines_using_kafka/: bank_script.sh  basics.py  kafka_script.sh
ibm-data-engineering-course/5_handson_lab/: etl_toll_data.py  streaming_data_reader.py  toll_traffic_generator.py
ibm-data-engineering-course/kafka_2.12-2.8.0/: LICENSE
(+93 files in other folders)
